<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mich.android.mich.Activities.RegisterActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_login_background"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:alpha="0.7"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        
            <LinearLayout
                android:layout_width="match_parent"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/mich_logo"/>

                <EditText
                    android:hint="@string/name"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:paddingLeft="16dp"
                    android:layout_height="50dp"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:background="@drawable/register_rounded_edit_text_selector"/>


                <EditText
                    android:hint="Lastname"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:paddingLeft="16dp"
                    android:layout_height="50dp"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:background="@drawable/register_rounded_edit_text_selector"/>

                <EditText
                    android:id="@+id/et_user_name"
                    android:hint="@string/user_name"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:paddingLeft="16dp"
                    android:layout_height="50dp"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:background="@drawable/register_rounded_edit_text_selector"/>

                <EditText
                    android:hint="@string/email"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:paddingLeft="16dp"
                    android:layout_height="50dp"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:background="@drawable/register_rounded_edit_text_selector"/>


                <EditText
                    android:hint="@string/password"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:paddingLeft="16dp"
                    android:layout_height="50dp"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:background="@drawable/register_rounded_edit_text_selector"/>

                <EditText
                    android:hint="@string/confirm_password"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:paddingLeft="16dp"
                    android:layout_height="50dp"
                    android:singleLine="true"
                    android:imeOptions="actionDone"
                    android:background="@drawable/register_rounded_edit_text_selector"/>


                <Button
                    android:layout_marginTop="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textColor="@android:color/white"
                    android:text="@string/sing_up"
                    android:onClick="onRegisterClick"
                    android:background="@drawable/register_rounded_edit_text_selector"/>

            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</LinearLayout>
